src/App.css
.logo {
	border-radius: 25px;
	height: 100px;
	text-align: center;
}

img.logo {
	margin: 20px;
}

.grid {
	margin-left: auto;
	margin-right: auto;
	display: grid;
	grid-template-columns: 500px;
	justify-content: center;
}

.grid > div {
    width: 500px;
		margin: 0 auto;
}

@media (max-width: 500px) {
	.grid > div {
		width: 70%;
	}
}

.spotify {
	border: 1px solid black;
  background-color: white;
  color: black;
  padding: 14px 28px;
  font-size: 12px;
  cursor: pointer;
	border-color: #04AA6D;
  color: green;
	border-radius: 20px;
	margin-bottom: 20px;
}

.divspotify {
	text-align: center;
}

.spotify:hover {
  background-color: #04AA6D;
  color: white;
}


/* Spinner css */
.innerCircle {
    position:absolute;
    background:pink;
    top:0;
    left:0px;
    right:0;
    bottom:0;
    margin:auto;
    width:80px;
    height:80px;
    border-radius:100%;
    z-index:1;
}
.circle {
    position:absolute;
    background:white;
    top:0;
    left:0;
    right:0;
    bottom:0;
    margin:auto;
    width:100px;
    height:100px;
    border-radius:100%;
}

.spinner .bar {
    position:absolute;
/*        background:black;*/
    top:0;
    left:0;
    right:0;
    bottom:0;
    margin:auto;
    width:10px;
    height:200px;
    z-index:10;
}

.spinner .bar:before {
    content:'';
    position:absolute;
    background:white;
    width:10px;
    height:30px;
}

.bar:nth-child(1) {transform:rotate(40deg);}
.bar:nth-child(2) {transform:rotate(80deg);}
.bar:nth-child(3) {transform:rotate(120deg);}
.bar:nth-child(4) {transform:rotate(160deg);}
.bar:nth-child(5) {transform:rotate(200deg);}
.bar:nth-child(6) {transform:rotate(240deg);}
.bar:nth-child(7) {transform:rotate(280deg);}
.bar:nth-child(8) {transform:rotate(320deg);}
.bar:nth-child(9) {transform:rotate(360deg);}

@keyframes spin {
    from { transform: rotate(0deg);}
    to { transform: rotate(-360deg);}
}

.spinner {
	position:absolute;
 top:0;
 left:0;
 right:0;
 bottom:0;
 width:50px;
 height:50px;
 margin:auto auto;
 animation: spin 3s linear infinite;
}

/* end of Spinner */

p {
	font-size: 1.2rem;
	margin-top: 2.2%
}

h1 {
	font-size: 4rem;
}

.app {
	width: 100%;
	height:100vh;
	background-color: rgba(45,0,0,0.4);
	color: #fff;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	position: absolute;
	text-align: left;
}

#video {
	position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
	z-index: -1;
}

.container {
	max-width: 700px;
	margin: auto;
	margin-top: 20px;
	position: static;
	flex-direction: column;
	justify-content: space-between;
}


.app .top {
	width: 100%;
}

.top {
	display: grid;
	grid-template-columns: 11fr 1fr;
}

.app .description {
	margin-top: 100px;
	right: -90%;
	transform-origin: 0 0;
	transform: rotate(270deg);

}

.app .bottom {
	display: flex;
	justify-content: space-evenly;
	text-align: center;
	width: 100%;
	margin: 0.5rem auto;
	padding: 0.5rem;
	border-radius: 12px;
	background-color: rgba(255,255,255, 0.2);
}

.bold {
	font-weight: 700;
}

iframe {
	border-radius: 12px;
}

